# bigpoi-qc

人机协同/digital-employee-closed-loop/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
人机协同/digital-employee-closed-loop/human-result-first-routing/: README.md  SKILL.md
人机协同/digital-employee-closed-loop/human-result-first-routing/config/: first_routing_rules.yaml
人机协同/digital-employee-closed-loop/human-result-first-routing/schema/: first_routing_result.schema.json
人机协同/digital-employee-closed-loop/human-result-first-routing/src/: __init__.py  cli.py  router.py
人机协同/digital-employee-closed-loop/human-result-first-routing/tests/: test_first_routing.py
人机协同/digital-employee-closed-loop/human-result-second-routing/: README.md  SKILL.md
人机协同/digital-employee-closed-loop/integration-output/: last_integration_result.json
人机协同/digital-employee-closed-loop/integrations/: targets.yaml
人机协同/digital-employee-closed-loop/pre-release-regression-validation/: README.md  SKILL.md
人机协同/digital-employee-closed-loop/qc-agent-self-improve/: README.md  SKILL.md
人机协同/digital-employee-closed-loop/qc-agent-self-improve/src/: cli.py  (+4 more)
人机协同/digital-employee-closed-loop/scripts/: run_batch_closed_loop_with_regression.py  run_closed_loop_pipeline.py  run_real_integration.py
人机协同/digital-employee-closed-loop/shared/: README.md  __init__.py
人机协同/digital-employee-closed-loop/tests/: test_batch_closed_loop_with_regression.py  test_closed_loop_pipeline.py  test_real_integration_runner.py
人机协同/digital-employee-closed-loop/verify-agent-self-improve/: README.md  SKILL.md
(+184 files in other folders)
